# formation

./: .gitignore  CLAUDE.md  Dockerfile  README.md  auth.py  build-with-podman.sh  build.sh  clients.py  config.example.json  config.py  dependencies.py  ds.py  exceptions.py  main.py  permissions.py  pyproject.toml  pytest.ini  utils.py
.claude/: README.md  hooks-example.md
docs/: API_ENDPOINTS.md  DATE_FILTERING.md  IMPLEMENTATION_STATUS.md  INTERACTIVE_APPS_ENDPOINT.md  TESTING.md
routes/: __init__.py  apps.py  auth.py  datastore.py
tests/: __init__.py  test_interactive_apps.py  test_service_accounts.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_app_endpoints.py  test_clients.py
