[project]
name = "formation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.9",
    "python-irodsclient>=3.1.1",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
